--- a/apps/subasta/templates/subasta_crear.html
+++ b/apps/subasta/templates/subasta_crear.html
@@ -22,7 +22,7 @@
                         <div class="col-lg-6 mb-2">
                             <div class="form-group">
                                 <label for="id_precio">Precio inicial:</label>
-                                <input class="form-control" type="number" name="precio" id="id_precio">
+                                <input class="form-control" type="number" min="0" name="precio" id="id_precio">
                             </div>
                         </div>
                         <div class="col-lg-12 mb-2">
@@ -38,9 +38,11 @@
                             </div>
                         </div>
                         <div class="col-lg-6 mb-2">
-                            <div class="text-center btn-group-ls" style="padding: 32px 0 0">
-                                <button class="btn btn-primary" type="submit">Crear</button>
-                                <a class="btn btn-danger" type="submit" href="{% url 'tienda:mostrar-tienda' %}">Cancelar</a>
+                            <div class="d-flex justify-content-end">
+                                <div class="btn-group-ls" style="padding: 32px 0 0">
+                                    <button class="btn btn-primary" type="submit">Crear</button>
+                                    <a class="btn btn-danger" type="submit" href="{% url 'tienda:mostrar-tienda' %}">Cancelar</a>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -50,31 +52,3 @@
     </form>
 </div>
 {% endblock %}
-{#<!DOCTYPE html>#}
-{#<html lang="en">#}
-{#<head>#}
-{#    <meta charset="UTF-8">#}
-{#    <title>Crear Subasta</title>#}
-{#</head>#}
-{#<body>#}
-{#<header>#}
-{#    <h4>{{ message }}</h4>#}
-{#</header>#}
-{#<form action="" method="post">#}
-{#    {% csrf_token %}#}
-{#    <li><label>Descripcion:</label></li>#}
-{#    <input id="id_descripcion" type="text" value="{{ descripcion }}" name="descripcion">#}
-{#    <li><label>Imagen:</label></li>#}
-{#    <input id="id_img" type="file" value="{{ img }}" name="img">#}
-{#    <li><label>Precio:</label></li>#}
-{#    <input id="id_precio" type="number" value="{{ precio }}" name="precio">#}
-{#    <li><label>Hora Final:</label></li>#}
-{#    <input id="id_hora" type="date" value="{{ hora_fecha }}" name="hora_fecha">#}
-{#    <input id="id_hora_t" type="time" value="{{ hora_reloj }}" name="hora_reloj">#}
-{#    <li><input type="submit" value="Crear"></li>#}
-{#</form>#}
-{#    <form action={% url 'subasta:inicio-subasta' %} method="get">#}
-{#        <input type="submit" value="Atras">#}
-{#    </form>#}
-{#</body>#}
-{#</html>#}
