--- a/templates/list-template.html
+++ b/templates/list-template.html
@@ -4,21 +4,21 @@
 {% block content %}
 <div class="container" style="padding: 25px">
     <div class="row">
+        <div class="col-lg-12 mb-2 text-center animated fadeInDown faster">
+            {% block main_text %}
+            {% endblock %}
+        </div>
         <div class="col-lg-3 mb-2">
             <div class="row">
-                <div class="col-lg-12 mb-2 animated fadeInDown faster">
-                    {% block main_text %}
-                    {% endblock %}
-                </div>
-
                 {% if categorias %}
-                <div class="col-lg-12 mb-2 animated fadeInDown fast">
-
-                    <a class="list-group-item">Categorias</a>
-                    <div class="list-group">
-                        {% for categoria in categorias %}
-                        <a class="list-group-item"><label><input type="checkbox"></label> {{ categoria }}</a>
-                        {% endfor %}
+                <div class="col mb-2 animated fadeInDown fast">
+                    <div class=list-group>
+                        <a class="list-group-item">Categorias</a>
+                        <div class="list-group-item">
+                            {% for categoria in categorias %}
+                            <a class="list-group-item"><label><input type="checkbox"></label> {{ categoria }}</a>
+                            {% endfor %}
+                        </div>
                     </div>
                 </div>
                 {% endif %}
@@ -28,7 +28,33 @@
             </div>
         </div>
         <div class="col-lg-9">
-            <div class="row">
+            <div class="row mb-2">
+            {% block filters %}
+                <div class="col">
+                    <div class="d-flex justify-content-start">
+                        <label for="search"></label>
+                        <input class="form-control"
+                               id="search"
+                               type="text"
+                               placeholder="Buscar..."
+                               oninput="search()">
+                    </div>
+                </div>
+                <div class="col offset-3">
+                    <div class="d-flex justify-content-end mr-2">
+                        <button class="btn btn-outline-secondary mr-2" onclick="orderBy()">Asc</button>
+                        <label for="order_by"></label>
+                        <select id="order_by" class="form-control">
+                            <option>hola</option>
+                            <option>hola</option>
+                            <option>hola</option>
+                            <option>hola</option>
+                        </select>
+                    </div>
+                </div>
+            {% endblock %}
+            </div>
+            <div id="item_list" class="row">
                 {% block loop %}
                 {% endblock %}
             </div>
