--- a/apps/subasta/templates/subasta_crear.html
+++ b/apps/subasta/templates/subasta_crear.html
@@ -1,4 +1,4 @@
-{% extends 'index-fixed.html' %}
+{% extends 'index_fixed.html' %}
 {% load static %}
 
 
@@ -22,7 +22,7 @@
                         <div class="col-lg-6 mb-2">
                             <div class="form-group">
                                 <label for="id_precio">Precio inicial:</label>
-                                <input class="form-control" type="number" min="0" name="precio" id="id_precio">
+                                <input class="form-control" type="number" min="0" step="0.05" name="precio" id="id_precio">
                             </div>
                         </div>
                         <div class="col-lg-12 mb-2">
