--- a/apps/tienda/templates/productos_listar.html
+++ b/apps/tienda/templates/productos_listar.html
@@ -1,53 +1,52 @@
-{% extends 'index-fixed.html' %}
+{% extends 'list_template.html' %}
 {% load static %}
 
 
-{% block content %}
-<div class="container" style="padding: 25px">
-    <div class="row">
-        <div class="col-lg-3 mb-2">
-            <div class="row">
-                <div class="col-lg-12 mb-2 animated fadeInDown" style="animation-delay: 0.25s">
-                    <h3><strong>Productos</strong></h3>
-                </div>
-                <div class="col-lg-12 mb-2 animated fadeInDown" style="animation-delay: 0.5s">
-                    <div class="list-group">
-                        <a class="list-group-item">Categorias</a>
-                        {% for categoria in categorias %}
-                        <a class="list-group-item"><label><input type="checkbox"></label> {{ categoria }}</a>
-                        {% endfor %}
-                    </div>
-                </div>
-                <div class="col-lg-12 mb-2 animated fadeInDown" style="animation-delay: 0.75s">
-                    <a class="btn btn-outline-primary" href="{% url 'index' %}">Filtrar</a>
-                </div>
-                <div class="col-lg-12 mb-2 animated fadeInDown" style="animation-delay: 0.75s">
-                    <a class="btn btn-outline-danger" href="{% url 'index' %}">Regresar</a>
-                </div>
-            </div>
+{% block filters %}
+<div class="col">
+    <div class="d-flex justify-content-start">
+        <label for="search"></label>
+        <input class="form-control"
+               id="search"
+               type="text"
+               placeholder="Buscar..."
+               oninput="search()">
+    </div>
+</div>
+<div class="col offset-2">
+    <div class="d-flex justify-content-end">
+        <button class="btn btn-outline-secondary" onclick="orderBy()">Ordenar</button>
+        <label for="order_by"></label>
+        <select id="order_by" class="form-control mr-2">
+            <option>Nombre</option>
+            <option>Precio</option>
+            <option>Fecha</option>
+            <option>Cantidad</option>
+        </select>
+        <a class="btn btn-outline-danger" href="{% url 'index' %}">Regresar</a>
+    </div>
+</div>
+{% endblock %}
+
+{% block loop %}
+{% for stock in stock_list %}
+<div id="{{ stock.producto.nombre.lower }}" class="col-lg-4 mb-3">
+    <div class="card">
+        <div class="card-body">
+            <h6>
+                <strong>
+                    <a href="{% url 'compra:detalles-producto' stock.tienda.id stock.id%}">
+                        {{ stock.producto.nombre }}
+                    </a>
+                </strong>
+            </h6>
+            <h6><strong>Precio  : </strong>{{ stock.producto.precio }}$</h6>
+            <h6><strong>Unidades: </strong>{{ stock.cantidad }}</h6>
         </div>
-        <div class="col-lg-9 mb-2">
-            <div class="row">
-                {% for stock in stock_list %}
-                <div class="col-lg-4 mb-3 animated fadeInLeft" style="animation-delay: 1s">
-                    <div class="card">
-                        <div class="card-body">
-                            <h6><strong>Producto: </strong>
-                                <a href="{% url 'compra:detalles-producto' stock.tienda.id stock.id%}">
-                                    {{ stock.producto.nombre }}
-                                </a>
-                            </h6>
-                            <h6><strong>Precio  : </strong>{{ stock.producto.precio }}$</h6>
-                            <h6><strong>Unidades: </strong>{{ stock.cantidad }}</h6>
-                        </div>
-                        <div class="card-footer">
-                            <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
-                        </div>
-                    </div>
-                </div>
-                {% endfor %}
-            </div>
+        <div class="card-footer">
+            <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
         </div>
     </div>
 </div>
+{% endfor %}
 {% endblock %}
