--- a/templates/index.html
+++ b/templates/index.html
@@ -38,7 +38,7 @@
                     <li class="animated fadeInDown" style="animation-delay: 100ms"><a href="{% url 'tienda:listar-productos'%}">Productos</a></li>
                     <li class="animated fadeInDown" style="animation-delay: 100ms"><a href="{% url 'tienda:listar-tiendas' %}">Tiendas</a></li>
                     <li class="animated fadeInDown" style="animation-delay: 100ms"><a href="{% url 'subasta:listar-subscripciones' %}">Subscripciones</a></li>
-                    <li class="animated fadeInDown" style="animation-delay: 100ms"><a href="{% url 'subasta:listar-subastas' %}">Subastas</a></li>
+                    <li class="animated fadeInDown" style="animation-delay: 100ms"><a href="{% url 'subasta:listar-subastas-todas' %}">Subastas</a></li>
                     <li class="animated fadeInDown" style="animation-delay: 100ms"><a href="{% url 'compra:listar-carrito' %}">Carrito</a></li>
                     {% if not tienda_id %}
                     <li class="animated fadeInDown" style="animation-delay: 100ms"><a href="{% url 'usuario:login' %}">Login</a></li>
