--- a/templates/index_fixed.html
+++ b/templates/index_fixed.html
@@ -16,7 +16,7 @@
                 <li><a href="{% url 'tienda:listar-productos'%}">Productos</a></li>
                 <li><a href="{% url 'tienda:listar-tiendas' %}">Tiendas</a></li>
                 <li><a href="{% url 'subasta:listar-subscripciones' %}">Subscripciones</a></li>
-                <li><a href="{% url 'subasta:listar-subastas' %}">Subastas</a></li>
+                <li><a href="{% url 'subasta:listar-subastas-todas' %}">Subastas</a></li>
                 <li><a href="{% url 'compra:listar-carrito' %}">Carrito</a></li>
                 {% if not tienda_id %}
                 <li><a href="{% url 'usuario:login' %}">Login</a></li>
