--- a/templates/list_template.html
+++ b/templates/list_template.html
@@ -1,4 +1,4 @@
-{% extends 'index-fixed.html' %}
+{% extends 'index_fixed.html' %}
 {%  load static %}
 
 {% block content %}
@@ -6,6 +6,7 @@
     <div class="row">
         <div class="col-lg-12 mb-2 text-center animated fadeInDown faster">
             {% block main_text %}
+                <h3 class="need-pd header-font-lp"><strong>{{ page_header_text }}</strong></h3>
             {% endblock %}
         </div>
         <div class="col-lg-3 mb-2">
@@ -30,28 +31,6 @@
         <div class="col-lg-9">
             <div class="row mb-2">
             {% block filters %}
-                <div class="col">
-                    <div class="d-flex justify-content-start">
-                        <label for="search"></label>
-                        <input class="form-control"
-                               id="search"
-                               type="text"
-                               placeholder="Buscar..."
-                               oninput="search()">
-                    </div>
-                </div>
-                <div class="col offset-3">
-                    <div class="d-flex justify-content-end mr-2">
-                        <button class="btn btn-outline-secondary mr-2" onclick="orderBy()">Asc</button>
-                        <label for="order_by"></label>
-                        <select id="order_by" class="form-control">
-                            <option>hola</option>
-                            <option>hola</option>
-                            <option>hola</option>
-                            <option>hola</option>
-                        </select>
-                    </div>
-                </div>
             {% endblock %}
             </div>
             <div id="item_list" class="row">
