--- a/apps/tienda/templates/producto_form.html
+++ b/apps/tienda/templates/producto_form.html
@@ -1,4 +1,5 @@
 {% extends 'index_fixed.html' %}
+{% load static %}
 
 
 {% block content %}
@@ -6,11 +7,19 @@
 
 <div class="container">
     <div class="d-flex justify-content-center">
-        <form method="post">
+        <form method="post" enctype="multipart/form-data">
             {% csrf_token %}
             <div class="card" style="max-width: 600px">
                 <div class="container" style="padding: 25px 25px 25px;">
                     <div class="row">
+                        <div class="card-img">
+                            {% if stock.producto.imagen %}
+                            <div class="d-flex justify-content-center">
+                                <img src="{{ stock.producto.imagen.url }}" alt="connect" style="max-height: 225px">
+                            </div>
+                            {% endif %}
+                        </div>
+
                         <div class="form-group col-lg-12">
                             <label for="id_nombre">Nombre</label>
                             <input class="form-control" type="text" name="nombre" id="id_nombre" value="{{ stock.producto.nombre }}">
@@ -26,6 +35,12 @@
                         <div class="form-group col-lg-12" >
                             <label for="id_descripcion">Descripcion</label>
                             <textarea class="form-control" rows="5" name="descripcion" id="id_descripcion">{{ stock.producto.descripcion }}</textarea>
+                        </div>
+                        <div class="form-group col-lg-12">
+                            <div class="custom-file col-lg-12 mt-2">
+                                <label for="id_imagen">Imagen</label>
+                                <input type="file" class="form-control-file" name="imagen" id="id_imagen" accept="image/*">
+                            </div>
                         </div>
                     </div>
                     <div class="text-center">
