--- a/apps/tienda/templates/tienda_visitar.html
+++ b/apps/tienda/templates/tienda_visitar.html
@@ -1,43 +1,21 @@
-{% extends 'list_template.html' %}
+{% extends 'product_list_template.html' %}
 {% load static %}
 
-{% block filters %}
-<div class="col">
-    <div class="d-flex justify-content-start">
-        <label for="search"></label>
-        <input class="form-control"
-               id="search"
-               type="text"
-               placeholder="Buscar..."
-               oninput="search()">
-    </div>
-</div>
-<div class="col offset-3">
-    <div class="d-flex justify-content-end">
-        <button class="btn btn-outline-secondary" onclick="orderBy()">Ordenar</button>
-        <label for="order_by"></label>
-        <select id="order_by" class="form-control mr-2">
-            <option>Nombre</option>
-            <option>Precio</option>
-            <option>Fecha</option>
-            <option>Cantidad</option>
-        </select>
-        <div class="dropdown">
-            <div class="btn btn-outline-secondary dropdown-toggle"
-                 id="dropdownMenuButton"
-                 type="button"
-                 data-toggle="dropdown"
-                 aria-haspopup="true"
-                 aria-expanded="false"
-            >...</div>
-            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                <h6 class="dropdown-header">Opciones</h6>
-                <a class="dropdown-item dro" href="{% url 'subasta:listar-subastas-tienda' tienda.id %}">Ver Subastas</a>
-                <div class="dropdown-divider"></div>
-                <h6 class="dropdown-header">Extras</h6>
-                <a class="dropdown-item" href="{% url 'index' %}">Regresar</a>
-            </div>
-        </div>
+{% block options %}
+<div class="dropdown">
+    <div class="btn btn-outline-secondary dropdown-toggle"
+         id="dropdownMenuButton"
+         type="button"
+         data-toggle="dropdown"
+         aria-haspopup="true"
+         aria-expanded="false"
+    >...</div>
+    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+        <h6 class="dropdown-header">Opciones</h6>
+        <a class="dropdown-item dro" href="{% url 'subasta:listar-subastas-tienda' tienda.id %}">Ver Subastas</a>
+        <div class="dropdown-divider"></div>
+        <h6 class="dropdown-header">Extras</h6>
+        <a class="dropdown-item" href="{% url 'index' %}">Regresar</a>
     </div>
 </div>
 {% endblock %}
@@ -52,59 +30,16 @@
                         {{ stock.producto.nombre }}
                     </a>
                 </h6>
+                {% if stock.producto.imagen %}
+                <div class="card-img d-flex justify-content-center">
+                    <img src="{{ stock.producto.imagen.url }}" alt="connected" style="max-height: 125px">
+                </div>
+                <br>
+                {% endif %}
                 <h6><strong>Precio  : </strong>{{ stock.producto.precio }}$</h6>
                 <h6><strong>Unidades: </strong>{{ stock.cantidad }}</h6>
-            </div>
-            <div class="card-footer">
-                <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
             </div>
         </div>
     </div>
 {% endfor %}
 {% endblock %}
-{#{% block content %}#}
-{#<div class="container" style="padding: 25px">#}
-{#    <div class="row">#}
-{#        <div class="col-lg-3 mb-2">#}
-{#            <div class="row">#}
-{#                <div class="col-lg-12 mb-2 animated fadeInDown faster">#}
-{#                    <h3 class="need-pd header-font-lp"><strong>Bienvenid@ a <b>{{ tienda.nombre }}</b></strong></h3>#}
-{#                </div>#}
-{#                <div class="col-lg-12 mb-2 animated fadeInDown fast">#}
-{#                    <a class="list-group-item">Categorias</a>#}
-{#                    <div class="list-group">#}
-{#                        {% for categoria in categorias %}#}
-{#                        <a class="list-group-item"><label><input type="checkbox"></label> {{ categoria }}</a>#}
-{#                        {% endfor %}#}
-{#                    </div>#}
-{#                </div>#}
-{#                <div class="col-lg-12 mb-2 animated fadeInDown fast">#}
-{#                    <a class="btn btn-outline-primary" href="{% url 'tienda:listar-tiendas' %}">Regresar</a>#}
-{#                </div>#}
-{#            </div>#}
-{#        </div>#}
-{#        <div class="col-lg-9">#}
-{#            <div class="row">#}
-{#                {% for stock in stock_list %}#}
-{#                <div class="col-lg-4 mb-3 animated fadeInLeft slow">#}
-{#                    <div class="card">#}
-{#                        <div class="card-body">#}
-{#                            <h6><strong>Producto: </strong>#}
-{#                                <a href="{% url 'compra:detalles-producto' stock.tienda.id stock.id%}">#}
-{#                                    {{ stock.producto.nombre }}#}
-{#                                </a>#}
-{#                            </h6>#}
-{#                            <h6><strong>Precio  : </strong>{{ stock.producto.precio }}$</h6>#}
-{#                            <h6><strong>Unidades: </strong>{{ stock.cantidad }}</h6>#}
-{#                        </div>#}
-{#                        <div class="card-footer">#}
-{#                            <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>#}
-{#                        </div>#}
-{#                    </div>#}
-{#                </div>#}
-{#                {% endfor %}#}
-{#            </div>#}
-{#        </div>#}
-{#    </div>#}
-{#</div>#}
-{#{% endblock %}#}
