--- a/apps/compra/templates/listar_carrito.html
+++ b/apps/compra/templates/listar_carrito.html
@@ -1,67 +1,47 @@
-{% extends 'index_fixed.html' %}
+{% extends 'product_list_template.html' %}
 {% load static %}
 
+{% block options %}
+<a class="btn btn-outline-danger" href="{% url 'index' %}">Regresar</a>
+{% endblock %}
 
-{% block content %}
-<div class="container" style="padding: 25px">
-    <form method="post">
-        {% csrf_token %}
-        <div class="row">
-            <div class="col-lg-3 mb-2">
-                <div class="row">
-                    <div class="col-lg-12 mb-2 animated fadeInDown" style="animation-delay: 0.25s">
-                        <h3><strong>Su Carrito de Compras</strong></h3>
-                    </div>
-                    <div class="col-lg-12 mb-2 animated fadeInDown" style="animation-delay: 0.5s">
-                        <div class="list-group">
-                            <a class="list-group-item">Categorias</a>
-                            {% for categoria in categorias %}
-                            <a class="list-group-item"><label><input type="checkbox"></label> {{ categoria }}</a>
-                            {% endfor %}
-                        </div>
-                    </div>
-                    <div class="col-lg-12 animated fadeInDown" style="animation-delay: 0.75s">
-                        <a class="btn btn-outline-primary" href="{% url 'index' %}">Filtrar</a>
+{% block preloop %}
+<form method="post">
+{% csrf_token %}
+    <div id="item_list" class="row">
+    {% for pedido in pedidos %}
+        <div class="col-lg-4 mb-3">
+            <div class="card">
+                <div class="card-body">
+                    <h6><strong>Producto: </strong>
+                        <a href="{% url 'compra:detalles-producto' pedido.tienda.id pedido.stock.id%}">
+                            {{ pedido.stock.producto.nombre }}
+                        </a>
+                    </h6>
+                    <h6><strong>Precio: </strong>{{ pedido.stock.producto.precio }}$</h6>
+                    <h6><strong>Unidades: </strong>{{ pedido.cantidad }}</h6>
+                    <div class="checkbox">
+                        <label for="{{ pedido.id }}">
+                            <strong>Seleccionar: </strong>
+                            <input type="checkbox" id="id_{{ pedido.id }}" name="pedido{{ pedido.id }}"/>
+                        </label>
                     </div>
                 </div>
-            </div>
-            <div class="col-lg-9 mb-2">
-                <div class="row">
-                    {% for pedido in pedidos %}
-                    <div class="col-lg-4 mb-3 animated fadeInLeft" style="animation-delay: 1s">
-                        <div class="card">
-                            <div class="card-body">
-                                <h6><strong>Producto: </strong>
-                                    <a href="{% url 'compra:detalles-producto' pedido.tienda.id pedido.stock.id%}">
-                                        {{ pedido.stock.producto.nombre }}
-                                    </a>
-                                </h6>
-                                <h6><strong>Precio: </strong>{{ pedido.stock.producto.precio }}$</h6>
-                                <h6><strong>Unidades: </strong>{{ pedido.cantidad }}</h6>
-                                <div class="checkbox">
-                                <label for="{{ pedido.id }}">
-                                    <strong>Seleccionar: </strong>
-                                    <input type="checkbox" id="id_{{ pedido.id }}" name="pedido{{ pedido.id }}"/>
-                                </label>
-                            </div>
-                            </div>
-                            <div class="card-footer">
-                                <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
-                            </div>
-                        </div>
-                    </div>
-                    {% endfor %}
-                </div>
-            </div>
-            <div class="col-lg-12 mb-2 animated fadeInDown" style="animation-delay: 0.75s">
-                <button class="btn btn-outline-primary" type="submit">Pagar</button>
-            </div>
-            <div class="col-lg-12 mb-2 animated fadeInDown" style="animation-delay: 0.75s">
-                <a class="btn btn-outline-danger" href="{% url 'index' %}">Regresar</a>
             </div>
         </div>
-    </form>
-
-
-</div>
+        {% endfor %}
+        {% if pedidos %}
+        <div class="col-lg-12 mb-2 animated fadeInDown" style="animation-delay: 0.75s">
+            <button class="btn btn-outline-primary" type="submit">Pagar</button>
+        </div>
+    {% endif %}
+    </div>
+</form>
 {% endblock %}
+
+{#{% block content %}#}
+{#<div class="container" style="padding: 25px">#}
+{#    #}
+{##}
+{#</div>#}
+{#{% endblock %}#}
