--- a/apps/subasta/templates/subastas_subscripciones_listar.html
+++ b/apps/subasta/templates/subastas_subscripciones_listar.html
@@ -14,7 +14,7 @@
 
             {% if subasta.producto.imagen %}
             <div class="card-img d-flex justify-content-center">
-                <img src="{{ stock.producto.imagen.url }}" alt="connected" style="max-height: 125px">
+                <img src="{{ subasta.producto.imagen.url }}" alt="connected" style="max-height: 125px">
             </div>
             <br>
             {% endif %}
