--- a/apps/compra/templates/eliminar_pedido.html
+++ b/apps/compra/templates/eliminar_pedido.html
@@ -5,10 +5,10 @@
 <div class="container" style="padding: 50px">
     <form method="post">
         {% csrf_token %}
-        <h1 class="text-center">Seguro que desea eliminar <i><b>{{ producto.nombre }}</b></i> de su carrito?</h1>
+        <h1 class="text-center">Seguro que desea eliminar las  <strong>{{ pedido.cantidad }}</strong> unidades de <i><b>{{ pedido.stock.producto.nombre }}</b></i> de su tienda?</h1>
         <div class="btn-group-lg text-center">
             <button class="btn btn-danger" type="submit">Si, Eliminar</button>
-            <a class="btn btn-secondary" href={% url 'tienda:mostrar-tienda' %}>No</a>
+            <a class="btn btn-secondary" href={% url 'compra:listar-carrito' %}>No</a>
         </div>
     </form>
 </div>
