--- a/apps/compra/templates/pasarela_de_pago.html
+++ b/apps/compra/templates/pasarela_de_pago.html
@@ -12,48 +12,36 @@
                 <div class="container" style="padding: 0 52px">
                     <div class="card-body">
                         <div class="row">
-                            {% if stock.producto.imagen %}
-                            <div class="card-img d-flex justify-content-center">
-                                <img src="{{ pedido.stock.producto.imagen.url }}" alt="connected" style="max-height: 255px">
-                            </div>
-                            <br>
-                            {% endif %}
+                            <h1>{{ stock.producto.nombre }}</h1>
                             <div class="col-lg-12 mb-2">
-                                <p class="card-title"><strong>{{ pedido.stock.producto.descripcion }}</strong></p>
+                                <p class="card-title"><strong>Precio: {{ stock.producto.precio }}$</strong></p>
                             </div>
                             <div class="col-lg-12 mb-2">
-                                <p class="card-title"><strong>En existencia: {{ pedido.stock.cantidad }}</strong></p>
-                            </div>
-                            <div class="col-lg-12 mb-2">
-                                <p class="card-title"><strong>En pedido: {{ pedido.cantidad }}</strong></p>
-                            </div>
-                            <div class="col-lg-12 mb-2">
-                                <p class="card-title"><strong>Precio por unidad: {{ pedido.stock.producto.precio }}$</strong></p>
+                                <p class="card-title"><strong>Cantidad: {{ cantidad }}</strong></p>
                             </div>
                             <div class="col-lg-12 mb-2">
                                 <p class="card-title"><strong>Total a pagar: {{ total }}$</strong></p>
+                            </div>
+                            <div class="row">
+                                <div class="col-lg-8">
+                                    <label for="id_numero_de_cuenta">Numero de cuenta</label>
+                                    <input class="form-control" type="number" id="id_numero_de_cuenta" maxlength="16" name="numero_de_cuenta">
+                                </div>
+                                <div class="col-lg-4">
+                                    <label for="id_ping">Ping</label>
+                                    <input class="form-control" type="number" id="id_ping" name="ping">
+                                </div>
                             </div>
                             <div class="col-lg-12 mb-2">
                                 {% if error_message %}
                                 <div class="text-center text-danger animated fadeInDown faster">{{ error_message }}</div>
                                 {% endif %}
                             </div>
-                            <div class="col-lg-4 mb2">
-                                <div class="form-group">
-                                    <input class="form-control"
-                                           type="number"
-                                           name="cantidad"
-                                           id="id_cantidad"
-                                           min="1"
-                                           value="{% if pedido.cantidad %}{{ pedido.cantidad }}{% else %}1{% endif %}">
-                                </div>
-                            </div>
-                            <div class="col-lg-8 mb2">
+                            <div class="col-lg-12 mb2">
                                 <div class="d-flex justify-content-end">
                                     <div class="btn-group-ls text-center">
-                                        <button class="btn btn-outline-primary" type="submit" name="action" value="update">Actualizar</button>
-                                        <a class="btn btn-outline-primary" href="{% url 'compra:listar-carrito' %}">Pagar</a>
-                                        <a class="btn btn-outline-danger" href="{% url 'compra:listar-carrito' %}">Cancelar</a>
+                                        <button class="btn btn-outline-primary" type="submit" name="action" value="update">Pagar</button>
+                                        <a class="btn btn-outline-danger" href="{% url 'tienda:listar-productos' %}">Cancelar</a>
                                     </div>
                                 </div>
                             </div>
