--- a/apps/tienda/templates/tienda_usuario_editar.html
+++ b/apps/tienda/templates/tienda_usuario_editar.html
@@ -14,15 +14,15 @@
                 <div class="row">
                     <div class="card-img">
                         {% if tienda.imagen %}
-                        <img class="col-12" src="{{ tienda.imagen.url }}" alt="">
+                        <img class="col-12" src="{{ tienda.imagen.url }}" alt="connected" style="max-height: 300px">
                         {% endif %}
                     </div>
                     <div class="form-group col-lg-12">
                         <label for="id_nombre">Nombre</label>
                         <input class="form-control" type="text" name="nombre" id="id_nombre" value="{{ tienda.nombre }}">
                         <div class="custom-file col-lg-12 mt-2">
-                            <label for="id_imagen" class="custom-file-label">Seleccionar</label>
-                            <input type="file" class="custom-file-input" name="imagen" id="id_imagen">
+                            <label for="id_imagen" >Seleccionar</label>
+                            <input type="file" class="file-upload" name="imagen" id="id_imagen">
                         </div>
                     </div>
                 </div>
